--- a/donut-clicker-0523-Numbah6-main/style.css
+++ b/donut-clicker-0523-Numbah6-main/style.css
@@ -3,7 +3,7 @@ body {
     background-color: beige;
 }
 
-/* About Us Dropdown Button*/
+/* About Us Button*/
 .dropbtn {
     background-color: rgb(119, 2, 2);
     color: white;
@@ -15,8 +15,7 @@ body {
 
 .dropdown {
     position: relative;
-    /*display: inline-block;*/
-    float: left;
+    display: inline-block;
 }
 
 .dropdown-content {
@@ -40,11 +39,46 @@ body {
 .dropdown:hover .dropbtn {background-color: blue;}
 
 /* About the Developer Dropdown Button*/
-.dropdev {
-    position: relative;
-    float: right;
+.devbutton {
+    background-color: rgb(119, 2, 2);
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
 }
 
-h3 {
-    float: left;
+.dev {
+    position: relative;
+    display: inline-block;
+    }
+
+.dev-content {
+    display: none;
+    position: absolute;
+    background-color: pink;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.dev-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dev-content a:hover {background-color: blue;}
+.dev:hover .dev-content {display: block;}
+.dev:hover .devbutton {background-color: blue;}
+
+/*.dropdown .dropdev {
+    justify-content: space-between;
+}*/
+
+.clicker {
+    position: relative;
+    float: none;
+    display: none;
 }
